--- a/index.html
+++ b/index.html
@@ -6,59 +6,120 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
+  <title>ITMD361L5</title>
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="icon" href="images/favicon.png">
+  <link rel="stylesheet" href="normalize_necolas.css">
+  <link rel="stylesheet" href="mystyle.css"/>
 </head>
 
 <body>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
-  
-  서식 : 테이블 1개에 행성정보, 이 1개 페이지만 이용
-  CSS스타일 다른 파일에다 두고 쓰기
-  다른거 적당히 집어넣어도 됨
-  CSS Framework Bootstrap하지 말것?
-  
-  행성정보:
-    지구:
-      Mass (kg)	5.98 x 1024
-      Diameter (km)	12756
-      Mean density (kg/m3)	5520
-      Escape velocity (m/s)	11200
-      Average distance from Sun	1 AU (149,597,890 km)
-      Rotation period (length of day in Earth days)	1 (23.93 hours)
-      Revolution period (length of year in Earth days)	365.26
-    천왕성:
-      Mass (kg)	8.68 x 1025
-      Diameter (km)	51118
-      Mean density (kg/m3)	1290
-      Escape velocity (m/s)	21300
-      Average distance from Sun	19.19 AU (2,870,972,200 km)
-      Rotation period (length of day in Earth days)	0.72 (17.9 Earth hours)(retrograde)
-      Revolution period (length of year in Earth days)	30,685 (84 Earth years)
-    토성:
-      Mass (kg)	5.69 x 1026
-      Diameter (km)	120660
-      Mean density (kg/m3)	690
-      Escape velocity (m/s)	35600
-      Average distance from Sun	9.537 AU (1,426,725,400 km)
-      Rotation period (length of day in Earth days)	0.44 (10.2 Earth hours)
-      Revolution period (length of year in Earth years)	29.46
-    해왕성:
-      Mass (kg)	1.02 x 1026
-      Diameter (km)	49528
-      Mean density (kg/m3)	1640
-      Escape velocity (m/s)	23300
-      Average distance from Sun	30.07 AU (4,498,252,900 km)
-      Rotation period (length of day in Earth days)	0.67 (19.1 hours)
-      Revolution period (length of year in Earth days)	60,190 (164.8 Earth years)
-  
-  CSS리셋/노멀라이징은 찾아둠
-  테이블 짜고 css건드는거부터.
-  
+
+  <h1>A Table of 4 planets</h1>
+  <h2>Table of Basic Information</h2>
+  <h2>Also has some pictures of planets!</h2>
+  <section class="list">
+    <p>This also contains fixed images that overlap!</p>
+    <pre>This also has a background actual image! 
+Which cannot be seen unless very narrowed!</pre>
+    <p>This does not contain the following : </p>
+    <ul>
+      <li>Good design</li>
+      <li>Good layout</li>
+      <li>Enjoyable content</li>
+    </ul>
+  </section>
+  <!--Table of planets--><table>
+    <tr>
+      <th>.</th>
+      <th>Earth</th>
+      <th>Saturn</th>
+      <th>Uranus</th>
+      <th>Neptune</th>
+    </tr>
+    <tr>
+      <th>Mass (kg): </th>
+      <td>5.98 x 1024</td>
+      <td>5.69 x 1026</td>
+      <td>8.68 x 1025</td>
+      <td>1.02 x 1026</td>
+    </tr>
+    <tr>
+      <th>Diameter (km): </th>
+      <td>12756</td>
+      <td>120660</td>
+      <td>51118</td>
+      <td>49528</td>
+    </tr>
+    <tr>
+      <th>Mean density (kg/m3): </th>
+      <td>5520</td>
+      <td>690</td>
+      <td>1290</td>
+      <td>1640</td>
+    </tr>
+    <tr>
+      <th>Escape velocity (m/s): </th>
+      <td>11200</td>
+      <td>35600</td>
+      <td>21300</td>
+      <td>23300</td>
+    </tr>
+    <tr>
+      <th>Average distance from Sun: </th>
+      <td>1 AU (149,597,890 km)</td>
+      <td>9.537 AU (1,426,725,400 km)</td>
+      <td>19.19 AU (2,870,972,200 km)</td>
+      <td>30.07 AU (4,498,252,900 km)</td>
+    </tr>
+    <tr>
+      <th>Rotation period (length of day in Earth days): </th>
+      <td>1 (23.93 hours)</td>
+      <td>0.44 (10.2 Earth hours)</td>
+      <td>0.72 (17.9 Earth hours)(retrograde)</td>
+      <td>0.67 (19.1 hours)</td>
+    </tr>
+    <tr>
+      <th>Revolution period (length of year in Earth days): </th>
+      <td>365.26</td>
+      <td>29.46</td>
+      <td>30,685 (84 Earth years)</td>
+      <td>60,190 (164.8 Earth years)</td>
+    </tr>
+  </table>
+  <!--Images of planets--><section>
+    <figure>
+      <img src = "images/earth.png" alt = "Earth" class="e">
+      <figcaption class="e">I need</figcaption>
+    </figure>
+    <figure class="r">
+      <img src = "images/saturn.jpg" alt = "Saturn" class="s">
+      <figcaption class="s">some boxes</figcaption>
+    </figure>
+    <figure class="l">
+      <img src = "images/uranus.png" alt = "Uranus" class="u">
+      <figcaption class="u">to move</figcaption>
+    </figure>
+    <figure class="l">
+      <img src = "images/neptune.jpg" alt = "Neptune" class="n">
+      <figcaption class="n">for css!</figcaption>
+    </figure>
+  </section>
+
+  <footer>
+    <p>Thx for reading!</p>
+    <nav>
+      <p>Info from : <a href = "https://pds.jpl.nasa.gov/planets/special/planets.htm" title = "NASA">NASA Planets</a></p>
+      <p>All images from : <a href = "https://nasasearch.nasa.gov/search/images?affiliate=nasa&query=" title = "NASA Gallery">NASA Gallery</a></p>
+      <p>Background image : <a href = "http://simpledesktops.com/browse/desktops/2016/feb/08/moon-rising/" title ="simplebackgrounds">From SimpleDesktops.com</a></p>
+    </nav>
+    <p>Media usage rights from NASA : NASA content - images, audio, video, and computer files used in the rendition of 3-dimensional models, such as texture maps and polygon data in any format - generally are not copyrighted. You may use this material for educational or informational purposes, including photo collections, textbooks, public exhibits, computer graphical simulations and Internet Web pages. This general permission extends to personal Web pages.</p>
+  </footer>
+
 </body>
 
 </html>
