--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 
   <title>ITMD361L5</title>
 
-  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" href="images/favicon.png">
-  <link rel="stylesheet" href="normalize_necolas.css">
-  <link rel="stylesheet" href="mystyle.css"/>
+  <link rel="stylesheet" href="css/normalize_necolas.css">
+  <link rel="stylesheet" href="css/mystyle.css"/>
 </head>
 
 <body>
